backend/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: marmiton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:15.4-alpine
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
          volumeMounts:
          - name: database-data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: database-data
        hostPath:
          path: /home/ubuntu/app/pg-data

---

apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: marmiton
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
