backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: marmiton
spec:
  tls:
  - hosts:
    - marmiton.bliblablou.day
    secretName: marmiton-bliblablou-tls
  rules:
  - host: marmiton.bliblablou.day
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8180
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3100
